# evolution-of-agents

./: .env.example  .gitignore  1-just-llm.ipynb  2-rag.ipynb  6-mcp-pg.ipynb  6-mcp-windows.py  6-mcp.ipynb  7-agent.ipynb  AzureStandardLogicAppTool.py  PR_DEFENSE_ANALYSIS.md  PR_REVIEW_RESPONSES.md  README.md  azure.yaml  books_sql.py  cancel_deployment.sh  installer.ps1  mcp_mslearn.py  mcp_pg.py  mcp_playwright.py  pyproject.toml  setup.py  uninstall.ps1
docs/: architecture.md  prd.md  sprint-change-proposal-terraform-to-bicep-correction.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/qa/gates/: 1.1-windows-setup-instructions.yml
docs/stories/: epic-1-developer-experience-improvements.md  story-1.1-windows-setup-instructions.md  story-1.2-bicep-infrastructure-automation.md  story-1.3-windows-installer.md
helpers/: AzureStandardLogicAppTool.py
infra/: main.bicep  main.json
infra/modules/ai/: add-project-capability-host.bicep  ai-foundry.bicep  ai-project-with-caphost.bicep  ai-project-with-caphost.json  ai-project.bicep  ai-project.json
infra/modules/function/: function-app-with-plan.bicep  office365-connection.bicep
infra/modules/networking/: vnet.bicep
infra/scripts/: add-playwright-connection.ps1  add-playwright-connection.sh  grant-graph-permissions.ps1
scripts/: configure-office365-access.ps1  configure-office365-access.sh  populate_env.ps1  populate_env.sh
src/workflows/: connections.json
src/workflows/create_event/: workflow.json
src/workflows/email_me/: workflow.json
(+2 files in other folders)
